--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^17.2.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
+    "ngx-mask": "^17.0.4",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.5",
     "tslib": "^2.3.0",
